[gd_scene load_steps=16 format=3 uid="uid://cfw050vcnfw5o"]

[ext_resource type="Script" path="res://objects/MOBS/bird/bird.gd" id="1_7wq51"]

[sub_resource type="BoxMesh" id="BoxMesh_jxh8t"]
size = Vector3(0.35, 0.255, 0.145)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_suhyv"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_fgbqa"]
material = SubResource("StandardMaterial3D_suhyv")
size = Vector3(0.04, 0.09, 0.145)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_tkrrw"]
points = PackedVector3Array(0.174966, 0.1275, 0.0725, 0.174966, 0.1275, -0.0725, -0.175, 0.1275, 0.0725, 0.174966, -0.1275, 0.0725, 0.174966, -0.1275, -0.0725, -0.175, 0.1275, -0.0725, -0.175, -0.1275, 0.0725, -0.175, -0.1275, -0.0725)

[sub_resource type="SphereShape3D" id="SphereShape3D_nwvrk"]
radius = 30.0

[sub_resource type="SphereShape3D" id="SphereShape3D_wq3k0"]
radius = 0.370371

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fq8pu"]
resource_name = "box"
cull_mode = 2
albedo_color = Color(0.906332, 0.556755, 0.141321, 1)
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p4asg"]
resource_name = "stretch"
cull_mode = 2
albedo_color = Color(0.906332, 0.906332, 0.906332, 1)
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_8sl3d"]
_surfaces = [{
"aabb": AABB(-0.25, -0.25, -0.375, 0.5, 0.5, 0.75001),
"format": 34896613377,
"index_count": 228,
"index_data": PackedByteArray(5, 0, 14, 0, 7, 0, 14, 0, 19, 0, 20, 0, 17, 0, 14, 0, 5, 0, 14, 0, 17, 0, 19, 0, 36, 0, 5, 0, 7, 0, 36, 0, 37, 0, 5, 0, 32, 0, 37, 0, 36, 0, 32, 0, 33, 0, 37, 0, 4, 0, 28, 0, 6, 0, 28, 0, 33, 0, 32, 0, 29, 0, 28, 0, 4, 0, 33, 0, 28, 0, 29, 0, 14, 0, 36, 0, 7, 0, 14, 0, 32, 0, 36, 0, 40, 0, 14, 0, 20, 0, 40, 0, 32, 0, 14, 0, 28, 0, 16, 0, 6, 0, 40, 0, 28, 0, 32, 0, 39, 0, 28, 0, 40, 0, 28, 0, 18, 0, 16, 0, 28, 0, 8, 0, 18, 0, 43, 0, 28, 0, 39, 0, 12, 0, 43, 0, 22, 0, 35, 0, 12, 0, 3, 0, 31, 0, 12, 0, 35, 0, 43, 0, 8, 0, 28, 0, 31, 0, 43, 0, 12, 0, 10, 0, 27, 0, 2, 0, 27, 0, 43, 0, 31, 0, 43, 0, 24, 0, 8, 0, 24, 0, 27, 0, 10, 0, 24, 0, 43, 0, 27, 0, 12, 0, 1, 0, 3, 0, 11, 0, 22, 0, 25, 0, 12, 0, 11, 0, 1, 0, 12, 0, 22, 0, 11, 0, 11, 0, 34, 0, 1, 0, 11, 0, 30, 0, 34, 0, 42, 0, 11, 0, 25, 0, 42, 0, 30, 0, 11, 0, 26, 0, 13, 0, 0, 0, 42, 0, 26, 0, 30, 0, 38, 0, 26, 0, 42, 0, 26, 0, 23, 0, 13, 0, 26, 0, 9, 0, 23, 0, 41, 0, 26, 0, 38, 0, 17, 0, 41, 0, 19, 0, 37, 0, 17, 0, 5, 0, 33, 0, 17, 0, 37, 0, 41, 0, 9, 0, 26, 0, 33, 0, 41, 0, 17, 0, 15, 0, 29, 0, 4, 0, 29, 0, 41, 0, 33, 0, 41, 0, 21, 0, 9, 0, 21, 0, 29, 0, 15, 0, 21, 0, 41, 0, 29, 0, 34, 0, 3, 0, 1, 0, 34, 0, 35, 0, 3, 0, 30, 0, 35, 0, 34, 0, 30, 0, 31, 0, 35, 0, 2, 0, 26, 0, 0, 0, 26, 0, 31, 0, 30, 0, 27, 0, 26, 0, 2, 0, 31, 0, 26, 0, 27, 0, 16, 0, 4, 0, 6, 0, 16, 0, 15, 0, 4, 0, 18, 0, 15, 0, 16, 0, 18, 0, 21, 0, 15, 0, 8, 0, 21, 0, 18, 0, 8, 0, 9, 0, 21, 0, 24, 0, 9, 0, 8, 0, 24, 0, 23, 0, 9, 0, 0, 0, 10, 0, 2, 0, 10, 0, 23, 0, 24, 0, 13, 0, 10, 0, 0, 0, 23, 0, 10, 0, 13, 0),
"lods": [0.000176245, PackedByteArray(5, 0, 14, 0, 7, 0, 17, 0, 14, 0, 5, 0, 14, 0, 17, 0, 19, 0, 14, 0, 19, 0, 20, 0, 28, 0, 5, 0, 7, 0, 28, 0, 37, 0, 5, 0, 37, 0, 28, 0, 4, 0, 4, 0, 28, 0, 6, 0, 14, 0, 28, 0, 7, 0, 40, 0, 14, 0, 20, 0, 40, 0, 28, 0, 14, 0, 39, 0, 28, 0, 40, 0, 43, 0, 28, 0, 39, 0, 43, 0, 24, 0, 28, 0, 28, 0, 24, 0, 6, 0, 24, 0, 43, 0, 35, 0, 24, 0, 35, 0, 2, 0, 35, 0, 43, 0, 12, 0, 12, 0, 43, 0, 22, 0, 35, 0, 12, 0, 3, 0, 12, 0, 1, 0, 3, 0, 12, 0, 11, 0, 1, 0, 12, 0, 22, 0, 11, 0, 11, 0, 22, 0, 25, 0, 11, 0, 26, 0, 1, 0, 42, 0, 11, 0, 25, 0, 42, 0, 26, 0, 11, 0, 38, 0, 26, 0, 42, 0, 41, 0, 26, 0, 38, 0, 41, 0, 21, 0, 26, 0, 26, 0, 21, 0, 0, 0, 21, 0, 41, 0, 37, 0, 21, 0, 37, 0, 4, 0, 37, 0, 41, 0, 17, 0, 17, 0, 41, 0, 19, 0, 37, 0, 17, 0, 5, 0, 26, 0, 3, 0, 1, 0, 26, 0, 35, 0, 3, 0, 35, 0, 26, 0, 2, 0, 2, 0, 26, 0, 0, 0, 24, 0, 4, 0, 6, 0, 24, 0, 21, 0, 4, 0, 21, 0, 24, 0, 0, 0, 0, 0, 24, 0, 2, 0)],
"name": "box",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 44,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 0, 0, 0, 0, 255, 255, 254, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 255, 255, 0, 0, 254, 255, 0, 0, 255, 255, 255, 255, 254, 255, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 127, 0, 0, 0, 0, 0, 0, 255, 127, 0, 0, 254, 255, 0, 0, 192, 64, 0, 0, 0, 0, 0, 0, 192, 64, 255, 255, 254, 255, 0, 0, 192, 64, 255, 255, 0, 0, 0, 0, 192, 64, 0, 0, 254, 255, 0, 0, 255, 191, 255, 255, 0, 0, 0, 0, 255, 191, 0, 0, 254, 255, 0, 0, 255, 191, 0, 0, 0, 0, 0, 0, 255, 191, 255, 255, 254, 255, 0, 0, 255, 159, 0, 0, 0, 0, 0, 0, 255, 159, 255, 255, 254, 255, 0, 0, 255, 159, 255, 255, 0, 0, 0, 0, 255, 159, 0, 0, 254, 255, 0, 0, 95, 96, 255, 255, 0, 0, 0, 0, 95, 96, 0, 0, 254, 255, 0, 0, 95, 96, 0, 0, 0, 0, 0, 0, 95, 96, 255, 255, 254, 255, 0, 0, 0, 0, 14, 128, 254, 255, 0, 0, 0, 0, 14, 128, 0, 0, 0, 0, 255, 255, 14, 128, 0, 0, 0, 0, 255, 255, 14, 128, 254, 255, 0, 0, 0, 0, 6, 192, 254, 255, 0, 0, 0, 0, 6, 192, 0, 0, 0, 0, 255, 255, 6, 192, 0, 0, 0, 0, 255, 255, 6, 192, 254, 255, 0, 0, 0, 0, 2, 224, 254, 255, 0, 0, 0, 0, 2, 224, 0, 0, 0, 0, 255, 255, 2, 224, 0, 0, 0, 0, 255, 255, 2, 224, 254, 255, 0, 0, 255, 127, 2, 224, 254, 255, 0, 0, 255, 127, 2, 224, 0, 0, 0, 0, 255, 159, 2, 224, 0, 0, 0, 0, 255, 159, 2, 224, 254, 255, 0, 0, 95, 96, 2, 224, 254, 255, 0, 0, 95, 96, 2, 224, 0, 0, 0, 0)
}, {
"aabb": AABB(-0.0617648, 0.187529, -0.375, 0.124265, 0.0624813, 0.75),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray(2, 0, 0, 0, 3, 0, 0, 0, 5, 0, 4, 0, 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 5, 0, 7, 0, 4, 0, 11, 0, 0, 0, 8, 0, 3, 0, 7, 0, 0, 0, 4, 0, 0, 0, 7, 0, 8, 0, 6, 0, 2, 0, 9, 0, 1, 0, 10, 0, 5, 0, 6, 0, 1, 0, 2, 0, 1, 0, 6, 0, 10, 0),
"name": "stretch",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 12,
"vertex_data": PackedByteArray(61, 127, 244, 255, 0, 0, 0, 0, 61, 127, 244, 255, 255, 255, 0, 0, 255, 255, 244, 255, 255, 255, 0, 0, 255, 255, 244, 255, 0, 0, 0, 0, 0, 0, 244, 255, 0, 0, 0, 0, 0, 0, 244, 255, 255, 255, 0, 0, 61, 127, 0, 0, 255, 255, 0, 0, 61, 127, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_xvtdo"]
resource_name = "package_box_Cube_001"
_surfaces = [{
"aabb": AABB(-0.25, -0.25, -0.375, 0.5, 0.5, 0.75001),
"attribute_data": PackedByteArray(255, 95, 255, 255, 255, 31, 255, 63, 255, 95, 0, 0, 255, 159, 255, 255, 255, 159, 0, 0, 255, 223, 255, 63, 255, 95, 255, 191, 255, 31, 255, 127, 255, 95, 255, 191, 255, 159, 255, 191, 255, 159, 255, 191, 255, 223, 255, 127, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 95, 255, 127, 255, 95, 255, 127, 255, 95, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 63, 255, 127, 255, 95, 255, 159, 255, 63, 255, 63, 255, 95, 255, 31, 47, 48, 255, 127, 255, 95, 207, 175, 255, 159, 48, 16, 207, 207, 255, 63, 255, 159, 207, 175, 207, 207, 255, 127, 47, 48, 255, 63, 255, 95, 48, 16, 255, 159, 255, 143, 255, 175, 255, 127, 255, 79, 255, 63, 255, 95, 255, 47, 255, 79, 255, 127, 255, 95, 255, 143, 255, 159, 255, 47, 255, 175, 255, 63, 255, 71, 255, 127, 255, 95, 255, 151, 255, 159, 255, 39, 255, 183, 255, 63, 255, 159, 255, 151, 255, 183, 255, 127, 255, 71, 255, 63, 255, 95, 255, 39, 255, 159, 231, 167, 231, 199, 255, 127, 23, 56, 255, 63, 255, 95, 23, 24, 23, 56, 255, 127, 255, 95, 231, 167, 255, 159, 23, 24, 231, 199, 255, 63, 3, 128, 255, 255, 3, 128, 0, 0, 3, 128, 255, 191, 3, 128, 255, 191, 3, 128, 255, 127, 3, 128, 255, 127, 3, 128, 255, 63, 3, 128, 255, 63, 1, 144, 255, 255, 1, 144, 0, 0, 1, 144, 255, 191, 1, 144, 255, 191, 1, 144, 255, 127, 1, 144, 255, 127, 1, 144, 255, 63, 1, 144, 255, 63, 0, 152, 255, 255, 0, 152, 0, 0, 0, 152, 255, 191, 0, 152, 255, 191, 0, 152, 255, 127, 0, 152, 255, 127, 0, 152, 255, 63, 0, 152, 255, 63, 0, 152, 255, 31, 0, 152, 255, 159, 0, 152, 255, 151, 0, 152, 255, 39, 0, 152, 23, 24, 0, 152, 231, 167),
"format": 34896613399,
"index_count": 228,
"index_data": PackedByteArray(16, 0, 37, 0, 22, 0, 37, 0, 47, 0, 49, 0, 43, 0, 37, 0, 16, 0, 37, 0, 43, 0, 47, 0, 81, 0, 17, 0, 23, 0, 81, 0, 83, 0, 17, 0, 73, 0, 83, 0, 81, 0, 73, 0, 75, 0, 83, 0, 14, 0, 65, 0, 20, 0, 65, 0, 75, 0, 73, 0, 67, 0, 65, 0, 14, 0, 75, 0, 65, 0, 67, 0, 36, 0, 80, 0, 21, 0, 36, 0, 72, 0, 80, 0, 86, 0, 36, 0, 48, 0, 86, 0, 72, 0, 36, 0, 64, 0, 41, 0, 19, 0, 86, 0, 64, 0, 72, 0, 85, 0, 64, 0, 86, 0, 64, 0, 45, 0, 41, 0, 64, 0, 25, 0, 45, 0, 89, 0, 64, 0, 85, 0, 32, 0, 89, 0, 52, 0, 79, 0, 32, 0, 10, 0, 71, 0, 32, 0, 79, 0, 89, 0, 25, 0, 64, 0, 71, 0, 89, 0, 32, 0, 29, 0, 63, 0, 8, 0, 63, 0, 89, 0, 71, 0, 89, 0, 57, 0, 25, 0, 57, 0, 63, 0, 29, 0, 57, 0, 89, 0, 63, 0, 33, 0, 5, 0, 11, 0, 31, 0, 53, 0, 59, 0, 33, 0, 31, 0, 5, 0, 33, 0, 53, 0, 31, 0, 30, 0, 77, 0, 4, 0, 30, 0, 69, 0, 77, 0, 88, 0, 30, 0, 58, 0, 88, 0, 69, 0, 30, 0, 61, 0, 35, 0, 2, 0, 88, 0, 61, 0, 69, 0, 84, 0, 61, 0, 88, 0, 61, 0, 55, 0, 35, 0, 61, 0, 27, 0, 55, 0, 87, 0, 61, 0, 84, 0, 42, 0, 87, 0, 46, 0, 82, 0, 42, 0, 15, 0, 74, 0, 42, 0, 82, 0, 87, 0, 27, 0, 61, 0, 74, 0, 87, 0, 42, 0, 39, 0, 66, 0, 13, 0, 66, 0, 87, 0, 74, 0, 87, 0, 51, 0, 27, 0, 51, 0, 66, 0, 39, 0, 51, 0, 87, 0, 66, 0, 76, 0, 9, 0, 3, 0, 76, 0, 78, 0, 9, 0, 68, 0, 78, 0, 76, 0, 68, 0, 70, 0, 78, 0, 6, 0, 60, 0, 0, 0, 60, 0, 70, 0, 68, 0, 62, 0, 60, 0, 6, 0, 70, 0, 60, 0, 62, 0, 40, 0, 12, 0, 18, 0, 40, 0, 38, 0, 12, 0, 44, 0, 38, 0, 40, 0, 44, 0, 50, 0, 38, 0, 24, 0, 50, 0, 44, 0, 24, 0, 26, 0, 50, 0, 56, 0, 26, 0, 24, 0, 56, 0, 54, 0, 26, 0, 1, 0, 28, 0, 7, 0, 28, 0, 54, 0, 56, 0, 34, 0, 28, 0, 1, 0, 54, 0, 28, 0, 34, 0),
"lods": [0.000176245, PackedByteArray(16, 0, 37, 0, 22, 0, 43, 0, 37, 0, 16, 0, 37, 0, 43, 0, 47, 0, 37, 0, 47, 0, 49, 0, 65, 0, 17, 0, 23, 0, 65, 0, 83, 0, 17, 0, 83, 0, 65, 0, 14, 0, 14, 0, 65, 0, 20, 0, 36, 0, 64, 0, 21, 0, 86, 0, 36, 0, 48, 0, 86, 0, 64, 0, 36, 0, 85, 0, 64, 0, 86, 0, 89, 0, 64, 0, 85, 0, 89, 0, 57, 0, 64, 0, 64, 0, 57, 0, 19, 0, 57, 0, 89, 0, 79, 0, 57, 0, 79, 0, 8, 0, 79, 0, 89, 0, 32, 0, 32, 0, 89, 0, 52, 0, 79, 0, 32, 0, 10, 0, 33, 0, 5, 0, 11, 0, 33, 0, 31, 0, 5, 0, 33, 0, 53, 0, 31, 0, 31, 0, 53, 0, 59, 0, 30, 0, 61, 0, 4, 0, 88, 0, 30, 0, 58, 0, 88, 0, 61, 0, 30, 0, 84, 0, 61, 0, 88, 0, 87, 0, 61, 0, 84, 0, 87, 0, 51, 0, 61, 0, 61, 0, 51, 0, 2, 0, 51, 0, 87, 0, 82, 0, 51, 0, 82, 0, 13, 0, 82, 0, 87, 0, 42, 0, 42, 0, 87, 0, 46, 0, 82, 0, 42, 0, 15, 0, 60, 0, 9, 0, 3, 0, 60, 0, 78, 0, 9, 0, 78, 0, 60, 0, 6, 0, 6, 0, 60, 0, 0, 0, 56, 0, 12, 0, 18, 0, 56, 0, 50, 0, 12, 0, 50, 0, 56, 0, 1, 0, 1, 0, 56, 0, 7, 0)],
"material": SubResource("StandardMaterial3D_fq8pu"),
"name": "box",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 90,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 84, 213, 0, 0, 0, 0, 254, 255, 255, 191, 0, 0, 0, 0, 254, 255, 255, 191, 0, 0, 255, 255, 254, 255, 84, 213, 0, 0, 255, 255, 254, 255, 255, 191, 0, 0, 255, 255, 254, 255, 255, 255, 0, 0, 0, 0, 0, 0, 84, 213, 0, 0, 0, 0, 0, 0, 255, 191, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 84, 213, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 255, 255, 255, 255, 0, 0, 254, 255, 255, 191, 255, 255, 0, 0, 254, 255, 255, 191, 255, 255, 0, 0, 254, 255, 84, 213, 255, 255, 255, 255, 254, 255, 255, 191, 255, 255, 255, 255, 254, 255, 255, 255, 255, 255, 255, 255, 254, 255, 84, 213, 255, 255, 0, 0, 0, 0, 255, 191, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 84, 213, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 84, 213, 255, 127, 0, 0, 0, 0, 255, 191, 255, 127, 0, 0, 0, 0, 255, 255, 255, 127, 0, 0, 254, 255, 255, 191, 255, 127, 0, 0, 254, 255, 255, 191, 192, 64, 0, 0, 0, 0, 255, 191, 192, 64, 0, 0, 0, 0, 255, 255, 192, 64, 255, 255, 254, 255, 255, 191, 192, 64, 255, 255, 254, 255, 255, 255, 192, 64, 255, 255, 0, 0, 255, 255, 192, 64, 255, 255, 0, 0, 255, 255, 192, 64, 0, 0, 254, 255, 255, 191, 192, 64, 0, 0, 254, 255, 255, 191, 255, 191, 255, 255, 0, 0, 255, 255, 255, 191, 255, 255, 0, 0, 255, 255, 255, 191, 0, 0, 254, 255, 255, 191, 255, 191, 0, 0, 254, 255, 255, 191, 255, 191, 0, 0, 0, 0, 255, 191, 255, 191, 0, 0, 0, 0, 255, 255, 255, 191, 255, 255, 254, 255, 255, 191, 255, 191, 255, 255, 254, 255, 255, 255, 255, 159, 0, 0, 0, 0, 255, 191, 255, 159, 0, 0, 0, 0, 255, 255, 255, 159, 255, 255, 254, 255, 255, 191, 255, 159, 255, 255, 254, 255, 255, 255, 255, 159, 255, 255, 0, 0, 255, 255, 255, 159, 255, 255, 0, 0, 255, 255, 255, 159, 0, 0, 254, 255, 255, 191, 255, 159, 0, 0, 254, 255, 255, 191, 95, 96, 255, 255, 0, 0, 255, 255, 95, 96, 255, 255, 0, 0, 255, 255, 95, 96, 0, 0, 254, 255, 255, 191, 95, 96, 0, 0, 254, 255, 255, 191, 95, 96, 0, 0, 0, 0, 255, 191, 95, 96, 0, 0, 0, 0, 255, 255, 95, 96, 255, 255, 254, 255, 255, 191, 95, 96, 255, 255, 254, 255, 255, 255, 0, 0, 14, 128, 254, 255, 84, 213, 0, 0, 14, 128, 254, 255, 255, 191, 0, 0, 14, 128, 0, 0, 84, 213, 0, 0, 14, 128, 0, 0, 255, 255, 255, 255, 14, 128, 0, 0, 255, 255, 255, 255, 14, 128, 0, 0, 84, 213, 255, 255, 14, 128, 254, 255, 255, 191, 255, 255, 14, 128, 254, 255, 84, 213, 0, 0, 6, 192, 254, 255, 84, 213, 0, 0, 6, 192, 254, 255, 255, 191, 0, 0, 6, 192, 0, 0, 84, 213, 0, 0, 6, 192, 0, 0, 255, 255, 255, 255, 6, 192, 0, 0, 255, 255, 255, 255, 6, 192, 0, 0, 84, 213, 255, 255, 6, 192, 254, 255, 255, 191, 255, 255, 6, 192, 254, 255, 84, 213, 0, 0, 2, 224, 254, 255, 84, 213, 0, 0, 2, 224, 254, 255, 255, 191, 0, 0, 2, 224, 0, 0, 84, 213, 0, 0, 2, 224, 0, 0, 255, 255, 255, 255, 2, 224, 0, 0, 255, 255, 255, 255, 2, 224, 0, 0, 84, 213, 255, 255, 2, 224, 254, 255, 255, 191, 255, 255, 2, 224, 254, 255, 84, 213, 255, 127, 2, 224, 254, 255, 255, 191, 255, 127, 2, 224, 0, 0, 255, 255, 255, 159, 2, 224, 0, 0, 255, 255, 255, 159, 2, 224, 254, 255, 255, 191, 95, 96, 2, 224, 254, 255, 255, 191, 95, 96, 2, 224, 0, 0, 255, 255, 84, 213, 84, 213, 0, 0, 255, 127, 255, 255, 255, 255, 84, 213, 84, 213, 255, 255, 255, 255, 255, 127, 255, 191, 84, 213, 84, 213, 0, 0, 255, 127, 255, 191, 255, 191, 84, 213, 84, 213, 255, 191, 255, 191, 255, 127, 255, 191, 0, 0, 255, 127, 255, 255, 255, 255, 170, 42, 170, 42, 255, 255, 255, 255, 255, 127, 255, 191, 170, 42, 170, 42, 0, 0, 255, 127, 255, 191, 255, 191, 170, 42, 170, 42, 255, 191, 255, 191, 255, 127, 255, 191, 170, 42, 170, 42, 0, 0, 255, 127, 255, 191, 255, 191, 0, 0, 255, 127, 255, 255, 255, 255, 0, 0, 255, 127, 255, 191, 255, 191, 255, 255, 255, 255, 255, 127, 255, 191, 255, 191, 255, 191, 255, 127, 255, 191, 0, 0, 255, 127, 255, 255, 255, 255, 255, 191, 255, 191, 255, 127, 255, 191, 0, 0, 255, 127, 255, 255, 255, 255, 0, 0, 255, 127, 255, 191, 255, 191, 255, 255, 255, 255, 255, 127, 255, 191, 0, 0, 255, 127, 255, 191, 255, 191, 255, 255, 255, 255, 255, 127, 255, 191, 255, 191, 255, 191, 255, 127, 255, 191, 0, 0, 255, 127, 255, 255, 255, 255, 255, 191, 255, 191, 255, 127, 255, 191, 0, 0, 255, 127, 255, 255, 255, 255, 0, 0, 255, 127, 255, 191, 255, 191, 255, 255, 255, 255, 255, 127, 255, 191, 84, 213, 84, 213, 255, 255, 255, 255, 84, 213, 84, 213, 255, 191, 255, 191, 255, 191, 255, 191, 170, 42, 170, 42, 255, 255, 255, 255, 170, 42, 170, 42, 84, 213, 84, 213, 255, 255, 255, 255, 84, 213, 84, 213, 255, 191, 255, 191, 255, 191, 255, 191, 170, 42, 170, 42, 255, 255, 255, 255, 170, 42, 170, 42, 84, 213, 84, 213, 255, 255, 255, 255, 84, 213, 84, 213, 255, 191, 255, 191, 255, 191, 255, 191, 170, 42, 170, 42, 255, 255, 255, 255, 170, 42, 170, 42, 255, 255, 255, 255, 255, 191, 255, 191, 255, 191, 255, 191, 255, 255, 255, 255, 255, 255, 255, 255, 255, 191, 255, 191)
}, {
"aabb": AABB(-0.0617648, 0.187529, -0.375, 0.124265, 0.0624813, 0.75),
"attribute_data": PackedByteArray(255, 159, 255, 159, 255, 191, 255, 127, 255, 159, 255, 31, 255, 191, 255, 63, 255, 159, 255, 39, 255, 183, 255, 63, 255, 159, 255, 151, 255, 183, 255, 127, 255, 159, 231, 167, 231, 199, 255, 127, 255, 159, 23, 24, 231, 199, 255, 63, 0, 152, 255, 31, 0, 152, 255, 159, 0, 152, 255, 151, 0, 152, 255, 39, 0, 152, 23, 24, 0, 152, 231, 167),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray(5, 0, 1, 0, 7, 0, 1, 0, 11, 0, 9, 0, 3, 0, 1, 0, 5, 0, 1, 0, 3, 0, 11, 0, 13, 0, 8, 0, 17, 0, 0, 0, 14, 0, 6, 0, 13, 0, 0, 0, 8, 0, 0, 0, 13, 0, 14, 0, 12, 0, 4, 0, 15, 0, 2, 0, 16, 0, 10, 0, 12, 0, 2, 0, 4, 0, 2, 0, 12, 0, 16, 0),
"material": SubResource("StandardMaterial3D_p4asg"),
"name": "stretch",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 18,
"vertex_data": PackedByteArray(61, 127, 244, 255, 0, 0, 255, 255, 61, 127, 244, 255, 0, 0, 255, 255, 61, 127, 244, 255, 255, 255, 255, 191, 61, 127, 244, 255, 255, 255, 255, 255, 255, 255, 244, 255, 255, 255, 255, 191, 255, 255, 244, 255, 255, 255, 255, 255, 255, 255, 244, 255, 0, 0, 255, 255, 255, 255, 244, 255, 0, 0, 255, 255, 0, 0, 244, 255, 0, 0, 255, 255, 0, 0, 244, 255, 0, 0, 255, 255, 0, 0, 244, 255, 255, 255, 255, 191, 0, 0, 244, 255, 255, 255, 255, 255, 61, 127, 0, 0, 255, 255, 255, 191, 61, 127, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 255, 255, 255, 191, 0, 0, 0, 0, 255, 255, 255, 191, 0, 0, 0, 0, 0, 0, 255, 255, 255, 191, 255, 191, 255, 127, 255, 191, 255, 255, 255, 255, 255, 127, 255, 191, 255, 255, 255, 255, 255, 127, 255, 191, 255, 191, 255, 191, 255, 127, 255, 191, 255, 191, 255, 191, 255, 127, 255, 191, 255, 255, 255, 255, 255, 127, 255, 191, 255, 255, 255, 255, 255, 191, 255, 191, 255, 191, 255, 191, 255, 255, 255, 255, 255, 255, 255, 255, 255, 191, 255, 191)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_8sl3d")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t2vl7"]
resource_name = "body"
cull_mode = 2
albedo_color = Color(0.754005, 0.754005, 0.754005, 1)
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5dx0s"]
resource_name = "Material"
cull_mode = 2
albedo_color = Color(0.906332, 0.906332, 0.906332, 1)
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_hk3q6"]
_surfaces = [{
"aabb": AABB(-1, -0.0292615, -0.608753, 2, 0.0628525, 1.21752),
"format": 34896613377,
"index_count": 69,
"index_data": PackedByteArray(0, 0, 3, 0, 1, 0, 0, 0, 2, 0, 3, 0, 2, 0, 7, 0, 3, 0, 2, 0, 6, 0, 7, 0, 6, 0, 5, 0, 7, 0, 6, 0, 4, 0, 5, 0, 0, 0, 5, 0, 4, 0, 5, 0, 1, 0, 8, 0, 5, 0, 0, 0, 1, 0, 2, 0, 4, 0, 6, 0, 2, 0, 0, 0, 4, 0, 5, 0, 3, 0, 7, 0, 3, 0, 8, 0, 1, 0, 3, 0, 5, 0, 8, 0, 7, 0, 11, 0, 8, 0, 7, 0, 10, 0, 11, 0, 8, 0, 9, 0, 3, 0, 8, 0, 11, 0, 9, 0, 3, 0, 10, 0, 7, 0, 3, 0, 9, 0, 10, 0, 4, 0, 1, 0, 0, 0, 4, 0, 5, 0, 1, 0, 5, 0, 1, 0, 8, 0),
"name": "body",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 12,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 0, 0, 0, 0, 92, 238, 254, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 92, 238, 0, 0, 0, 0, 255, 255, 0, 0, 254, 255, 0, 0, 255, 255, 92, 238, 254, 255, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 92, 238, 0, 0, 0, 0, 255, 127, 92, 238, 95, 215, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 127, 255, 255, 95, 215, 0, 0)
}, {
"aabb": AABB(-1, 0.0335909, -0.608753, 2, 9.99868e-06, 1.02431),
"format": 34896613377,
"index_count": 3,
"index_data": PackedByteArray(2, 0, 1, 0, 0, 0),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 3,
"vertex_data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 127, 0, 0, 255, 255, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_ciiio"]
resource_name = "package_letter_Cube_001"
_surfaces = [{
"aabb": AABB(-1, -0.0292615, -0.608753, 2, 0.0628525, 1.21752),
"attribute_data": PackedByteArray(255, 95, 255, 255, 255, 31, 255, 63, 0, 0, 255, 255, 255, 95, 0, 0, 255, 159, 255, 255, 0, 0, 255, 255, 255, 159, 0, 0, 0, 0, 255, 255, 255, 223, 255, 63, 255, 95, 255, 191, 255, 31, 255, 127, 255, 95, 255, 191, 255, 159, 255, 191, 255, 159, 255, 191, 255, 223, 255, 127, 255, 223, 255, 127, 0, 0, 255, 255, 255, 95, 255, 63, 0, 0, 255, 255, 255, 95, 255, 63, 255, 95, 255, 63, 0, 0, 255, 255, 255, 159, 255, 63, 0, 0, 255, 255, 255, 159, 255, 63, 255, 159, 255, 63, 255, 95, 255, 127, 255, 95, 255, 127, 255, 95, 255, 127, 0, 0, 255, 255, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 0, 0, 255, 255, 255, 159, 255, 31, 0, 0, 255, 255, 255, 191, 255, 63, 0, 0, 255, 255, 255, 223, 255, 127, 0, 0, 255, 255, 0, 0, 255, 255, 255, 159, 255, 127, 0, 0, 255, 255, 0, 0, 255, 255),
"format": 34896613399,
"index_count": 69,
"index_data": PackedByteArray(0, 0, 12, 0, 4, 0, 0, 0, 9, 0, 12, 0, 11, 0, 30, 0, 13, 0, 11, 0, 27, 0, 30, 0, 28, 0, 25, 0, 33, 0, 28, 0, 20, 0, 25, 0, 3, 0, 22, 0, 19, 0, 22, 0, 6, 0, 35, 0, 22, 0, 3, 0, 6, 0, 10, 0, 17, 0, 26, 0, 10, 0, 1, 0, 17, 0, 24, 0, 15, 0, 32, 0, 15, 0, 37, 0, 8, 0, 15, 0, 24, 0, 37, 0, 29, 0, 43, 0, 34, 0, 29, 0, 41, 0, 43, 0, 38, 0, 40, 0, 16, 0, 38, 0, 44, 0, 40, 0, 14, 0, 42, 0, 31, 0, 14, 0, 39, 0, 42, 0, 18, 0, 5, 0, 2, 0, 18, 0, 21, 0, 5, 0, 23, 0, 7, 0, 36, 0),
"material": SubResource("StandardMaterial3D_t2vl7"),
"name": "body",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 45,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 84, 213, 0, 0, 0, 0, 254, 255, 255, 191, 0, 0, 0, 0, 254, 255, 255, 255, 0, 0, 0, 0, 254, 255, 232, 201, 0, 0, 92, 238, 254, 255, 84, 213, 0, 0, 92, 238, 254, 255, 255, 255, 0, 0, 92, 238, 254, 255, 232, 201, 0, 0, 92, 238, 254, 255, 255, 191, 0, 0, 92, 238, 254, 255, 128, 250, 0, 0, 0, 0, 0, 0, 84, 213, 0, 0, 0, 0, 0, 0, 255, 191, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 92, 238, 0, 0, 84, 213, 0, 0, 92, 238, 0, 0, 255, 255, 0, 0, 92, 238, 0, 0, 254, 127, 0, 0, 92, 238, 0, 0, 40, 254, 0, 0, 92, 238, 0, 0, 86, 233, 255, 255, 0, 0, 254, 255, 255, 191, 255, 255, 0, 0, 254, 255, 255, 255, 255, 255, 0, 0, 254, 255, 232, 201, 255, 255, 0, 0, 254, 255, 84, 213, 255, 255, 92, 238, 254, 255, 255, 255, 255, 255, 92, 238, 254, 255, 232, 201, 255, 255, 92, 238, 254, 255, 255, 191, 255, 255, 92, 238, 254, 255, 148, 254, 255, 255, 92, 238, 254, 255, 84, 213, 255, 255, 0, 0, 0, 0, 255, 191, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 84, 213, 255, 255, 92, 238, 0, 0, 86, 233, 255, 255, 92, 238, 0, 0, 255, 255, 255, 255, 92, 238, 0, 0, 254, 127, 255, 255, 92, 238, 0, 0, 255, 255, 255, 255, 92, 238, 0, 0, 84, 213, 255, 127, 92, 238, 95, 215, 86, 233, 255, 127, 92, 238, 95, 215, 49, 86, 255, 127, 92, 238, 95, 215, 255, 191, 255, 127, 92, 238, 95, 215, 143, 253, 255, 127, 92, 238, 95, 215, 86, 233, 0, 0, 255, 255, 0, 0, 254, 127, 0, 0, 255, 255, 0, 0, 86, 233, 255, 255, 255, 255, 0, 0, 86, 233, 255, 255, 255, 255, 0, 0, 254, 127, 255, 127, 255, 255, 95, 215, 86, 233, 255, 127, 255, 255, 95, 215, 86, 233, 84, 213, 84, 213, 0, 0, 255, 127, 255, 255, 255, 127, 23, 222, 231, 33, 84, 213, 84, 213, 255, 255, 255, 127, 23, 222, 231, 33, 255, 255, 255, 127, 216, 133, 18, 189, 84, 213, 84, 213, 0, 0, 255, 127, 255, 191, 255, 191, 84, 213, 84, 213, 255, 191, 255, 191, 255, 127, 255, 255, 2, 130, 253, 190, 255, 127, 0, 0, 0, 0, 255, 127, 255, 255, 255, 127, 23, 222, 231, 33, 170, 42, 170, 42, 255, 255, 255, 127, 23, 222, 231, 33, 255, 255, 255, 127, 198, 192, 141, 1, 170, 42, 170, 42, 0, 0, 255, 127, 255, 191, 255, 191, 170, 42, 170, 42, 255, 127, 255, 255, 255, 191, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 170, 42, 170, 42, 255, 127, 255, 255, 255, 255, 255, 127, 255, 255, 255, 127, 82, 193, 167, 2, 255, 127, 0, 0, 255, 127, 255, 255, 255, 127, 0, 0, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 0, 0)
}, {
"aabb": AABB(-1, 0.0335909, -0.608753, 2, 9.99868e-06, 1.02431),
"attribute_data": PackedByteArray(255, 159, 255, 191, 255, 159, 255, 127, 0, 0, 255, 255),
"format": 34896613399,
"index_count": 3,
"index_data": PackedByteArray(2, 0, 1, 0, 0, 0),
"material": SubResource("StandardMaterial3D_5dx0s"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 3,
"vertex_data": PackedByteArray(0, 0, 0, 0, 0, 0, 137, 246, 255, 255, 0, 0, 0, 0, 137, 246, 255, 127, 0, 0, 255, 255, 137, 246, 48, 118, 231, 68, 48, 118, 231, 68, 48, 118, 231, 68)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_hk3q6")

[node name="bird" type="AnimatableBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0325931, 0, 0)
script = ExtResource("1_7wq51")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.033178, 0.126077, 0)
mesh = SubResource("BoxMesh_jxh8t")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.160655, 0.195346, 0)
mesh = SubResource("BoxMesh_fgbqa")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.033178, 0.126077, 0)
shape = SubResource("ConvexPolygonShape3D_tkrrw")

[node name="trigger" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.033178, 0.126077, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="trigger"]
shape = SubResource("SphereShape3D_nwvrk")

[node name="grab_zone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.033178, 0.126077, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="grab_zone"]
shape = SubResource("SphereShape3D_wq3k0")

[node name="hand" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.033178, -0.225202, 0)

[node name="box" type="MeshInstance3D" parent="hand"]
transform = Transform3D(1, 0, 0, 0, 0.759743, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("ArrayMesh_xvtdo")
skeleton = NodePath("")

[node name="letter" type="MeshInstance3D" parent="hand"]
transform = Transform3D(0, 0.231822, 0.0621165, 0, 0.0621166, -0.231822, -0.24, 0, 0, 0, 0.0747697, 0)
mesh = SubResource("ArrayMesh_ciiio")
skeleton = NodePath("")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="trigger" to="." method="_on_trigger_body_entered"]
[connection signal="body_entered" from="grab_zone" to="." method="_on_grab_zone_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
